--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3395,7 +3395,7 @@ input[type=button].btn-block {
 .dropdown-menu {
   position: absolute;
   top: 100%;
-  left: 0;
+  /* left: 0; */
   z-index: 1000;
   display: none;
   float: left;
@@ -10901,5 +10901,7 @@ a.text-dark:focus {
     color: inherit;
     border-color: #dee2e6;
   }
+
+
 }
 
